css/main.css
/* ... */
ul.Profile-Navigation-List.ui-listview {
    margin-top: 20px;
}

.UserNavigation.logout.User-Profile-Edit.Register-Account-Text {
    padding-left: 40px;
}

p.UserNavigation.User-Profile-Edit.Register-Account-Text {
    padding-right: 40px;
}

.UserNavigation-labels {
    font-weight: bold !important;
}

ul.Profile-Navigation-List.ui-listview {
    margin: 0em;
    margin-top: 60px;
    margin-bottom: 60px;
}

p.About-Us.Register-Account-Text {
    float: right;
    padding-right: 25px;
    margin-top: 10px;
}

img.About-Us.User-registration.Ipad-logo-size.logo-image {
    margin-top: -40px;
}

.footer-icons {
    width: 28px;
}

.footer-class {
    position: fixed !important;
    bottom: 0px !important;
    left: 0px !important;
    right: 0px !important;
    overflow: hidden !important;
}

.page-footer {
    background-color: #282d42 !important;
    border-color: #282d42 !important;
    font-weight: 0 !important;
}

.header-class {
    top: -1px;
    left: 0px;
    right: 0px;
    overflow: hidden;
}

.content-class {
    position: absolute;
    top: 70px;
    bottom: 30px;
    left: 0px;
    right: 0px;
    overflow: auto;
}

.btn-nav-bar {
    border-color: #282d42 !important;
}

.btn-nav-bar img {
    width: 20px;
    height: auto;
}

h1.header-title.ui-title {
    font-size: 22px !important;
    font-weight: normal;
}

.btn-home {
    display: inline-block;
    margin-top: 11px !important;
    border: solid 0px transparent;
    text-shadow: none;
    background-color: transparent !important;
    padding-top: 0px !important;
    height: 30px !important;
}

.btn-home img {
    margin-top: -17px;
    margin-left: -21px;
    height: 64px;
}

.btn-userprofile {
    display: inline-block;
    margin-top: 11px !important;
    border: solid 0px transparent;
    text-shadow: none;
    background-color: transparent !important;
    padding-top: 0px !important;
    height: 30px !important;
}

.btn-userprofile img {
    margin-right: -28px;
    margin-top: -2px;
    height: 36px;
}

.btn-camera {
    margin-right: -43px !important;
    display: inline-block;
    margin-top: 11px !important;
    border: solid 0px transparent;
    text-shadow: none;
    background-color: transparent !important;
    padding-top: 0px !important;
    height: 30px !important;
}

.btn-camera img {
    margin-right: -48px;
    height: 32px;
}

li.second-nav-header {
    padding: 5px !important;
}

.navbar-header.ui-navbar {
    margin-right: 5px;
    margin-top: -2px;
    margin-top: 57px;
}

a.second-nav-header-radius.ui-link.ui-btn {
    border-radius: 5px;
}

.main {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-gap: 1px;
}

.item {
    margin: 13px;
    background: #6060602e;
    border-radius: 20px;
    width: 180px;
    height: 190px;
}

img.category-image-items-display {
    height: 67%;
    border-width: 0;
    width: 67%;
    display: block;
    margin: auto;
    margin-top: 20px;
}

p.Product-Price {
    text-align: left;
    line-height: 3px;
    margin-left: 20px;
    margin-top: 5px;
}

h3.product-addtocart-popup {
    text-align: center;
    font-size: 16px;
    margin-top: -20px;
    font-weight: bold;
}

.price {
    display: inline-block;
    font-size: 14px;
    line-height: 1px;
    font-weight: 100;
}

.float-price {
    float: right;
}

button.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
    display: inline-block;
    float: right;
    width: auto;
    font-size: 10px;
    padding: unset;
    border: none;
    background: none;
    margin-top: 7px;
}

img.product-popup-icon {
    width: 14px;
    margin-left: 4px;
    margin-right: 4px;
}

.add-to-cart-button-div {
    background: #ef963a;
    display: inline-flex;
    border-radius: 29px;
    width: 29px;
    padding-bottom: 5px;
    padding: 7px;
}

img.add-to-cart-plus-icon {
    width: 25px;
    padding-left: 2px;
    margin-bottom: -2px;
}

.align-addtocart {
    float: right;
    margin-top: -5px;
    margin-right: 5px;
}

.align-favourite {
    float: right;
    margin-right: 10px;
    margin-bottom: -30px;
}

h3.heading.ui-content {
    margin-left: -10px !important;
    margin-bottom: -20px !important;
}

.search {
    display: block;
    margin: auto;
    text-align: center;
    width: 100%;
    margin-top: 70px;
}

.loader {
    display: block;
    margin: auto;
    text-align: center;
    width: 100%;
    margin-top: 70px;
}

.loader-gif {
    width: 60%;
}

.promotion-card {
    border-radius: 10%;
    padding: 5%;
}

.pr-card {
    height: 300px;
    width: 350px;
    margin-top: 20px;
    margin-left: 9%;
}

.promotion-text {
    word-wrap: break-word;
}

div#select-native-3-button {
    margin: 10px !important;
}

img.loading-page-logo {
    width: 100% !important;
    margin-top: 140px !important;
}


/*ipad potrait*/

p.single-product-page-title {
    font-size: 25px;
    font-weight: 700;
    line-height: 1px;
}

.single-product-background.w3-content.w3-display-container {
    background: #6060602e;
    padding: 30px;
    border-radius: 30px;
}

span.single-product-page-photos-iconball.w3-badge.demo.w3-border.w3-transparent.w3-hover-white.w3-white {
    width: 20px;
    height: 20px;
}

.w3-large {
    font-size: 30px !important;
}

img.single-product.product-popup-icon {
    width: 20px;
    margin-left: 6px;
    margin-right: 15px;
    margin-top: 2px;
}

.single-product {
    font-size: 20px !important;
    padding: 5px !important;
}

button.single-product-page.btn-nav-bar.addmore-button-quantity-popup.ui-btn.ui-btn-none.ui-corner-all {
    margin-right: -10px;
}

.favourites.ui-content {
    width: 100% !important;
    padding: unset;
}

.email-list-button {
    padding: 10px;
}

.order-main {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
}

.order-item {
    border-radius: 20px;
    width: 100%;
    height: auto;
}
/* ... */

